package chat.command;

message CreateChat {
  required string chatId = 1;
}

message CloseChat {
  required string chatId = 1;
}
message UserJoinChat {
  required string userId = 1;
  required string chatId = 2;
}

message UserLeaveChat {
  required string userId = 1;
  required string chatId = 2;
}

message ChatMessage {
  required string userId = 1;
  required string chatId = 2;
  required string message = 3;
}

message RestoreChat {
  required string chatId = 1;
}